[package]
name = "lrthrome"
version = "0.1.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
log = "0.4.0"
reqwest = "0.10"
env_logger = "0.8.2"
toml = "0.5"
cidr = "0.1"
byteorder = "1"
bitstring = "0.1"
bitstring-trees = "0.1"
async-trait = "0.1"

[dependencies.tokio]
version = "0.3"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
