[package]
name = "lrthrome"
version = "0.2.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
log = "0.4.0"
reqwest = "0.11"
ratelimit_meter = "5"
env_logger = "0.8.2"
toml = "0.5"
cidr = "0.1"
nom = "6.0.1"
async-trait = "0.1"
tokio-stream = "0.1.0"
futures = "0.3"
bytes = "1.0"
treebitmap = "0.4.0"

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.tokio-util]
version = "0.6"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
